--- a/README
+++ b/README
@@ -16,7 +16,7 @@
 
 ## Ответственный по проектной (учебной) практике
 
-ФИО ответственного, кафедра ИТ.
+Ольга Володина, кафедра ИТ.
 
 ## Проектная деятельность
 
